--- a/Front-end/hackathon.css
+++ b/Front-end/hackathon.css
@@ -59,7 +59,7 @@ body {
   bottom: 0;
 }
 
-.footer-content {
+.footer-content p{
   display: flex;
   justify-content: center;
   align-items: center;
